--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,26 @@
 video {
   background-color: #ddd;
-  border-radius: 7px;
-  margin: 10px 0px 0px 10px;
-  width: 320px;
-  height: 240px;
+  border-radius: 21px;
+  margin: 10px 0px 0px 30px;
+  width: 600px;
+  height: 450px;
 }
 button {
   margin: 5px 0px 0px 10px !important;
   width: 654px;
+  align-content: center;
+}
+
+.name {
+  font-family: 'Audiowide', cursive;
+  font-size: 60px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  padding: 30px;
+  text-align: center;
+  padding-bottom: 1em;
+}
+
+.videoContainer {
+  text-align: center;
 }
