--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,17 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 video {
   background-color: #ddd;
   border-radius: 21px;
-  margin: 10px 0px 0px 30px;
+  margin: 30px 0px 0px 10px;
   width: 600px;
   height: 450px;
 }
 button {
-  margin: 5px 0px 0px 10px !important;
+  margin: 10px 0px 0px 10px !important;
   width: 654px;
   align-content: center;
 }
@@ -16,11 +21,36 @@ button {
   font-size: 60px;
   border-left: 1px solid black;
   border-right: 1px solid black;
-  padding: 30px;
+  padding: 10px;
+  padding-bottom: 5px;
   text-align: center;
-  padding-bottom: 1em;
+  margin-left: 650px;
+  margin-right: 650px;
 }
 
 .videoContainer {
   text-align: center;
+}
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-family: 'Raleway', cursive;
+}
+
+#yourVideo {
+  margin: 20px;
+}
+
+#friendsVideo {
+  margin: 20px;
 }
