--- a/css/style.css
+++ b/css/style.css
@@ -7,29 +7,32 @@ video {
   background-color: #ddd;
   border-radius: 21px;
   margin: 30px 0px 0px 10px;
-  width: 600px;
-  height: 450px;
+  width: 35%;
+  height: 75%;
 }
 button {
   margin: 10px 0px 0px 10px !important;
-  width: 654px;
+  width: 40%;
   align-content: center;
+  
 }
 
 .name {
+  height: 10%;
   font-family: 'Audiowide', cursive;
-  font-size: 60px;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
+  font-size: 400%;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
   padding: 10px;
   padding-bottom: 5px;
   text-align: center;
-  margin-left: 650px;
-  margin-right: 650px;
+  margin-left: 40%;
+  margin-right: 40%;
 }
 
 .videoContainer {
   text-align: center;
+  height: 75%;
 }
 
 p {
@@ -38,13 +41,11 @@ p {
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-}
-
-p {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   text-align: center;
   font-family: 'Raleway', cursive;
+  height: 5%;
 }
 
 #yourVideo {
@@ -53,4 +54,12 @@ p {
 
 #friendsVideo {
   margin: 20px;
+}
+
+.top {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  padding-bottom: 5px;
+  text-align: center;
 }
