--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,10 @@ button {
 .name {
   height: 10%;
   font-family: 'Audiowide', cursive;
-  font-size: 400%;
-  font-stretch: 10%;
+  font-size: 3.5vw;
   border-left: 1px solid white;
   border-right: 1px solid white;
-  padding: 10px;
+  padding: 1%;
   padding-bottom: 5px;
   text-align: center;
   margin-left: 40%;
@@ -36,6 +35,7 @@ button {
 }
 
 p {
+  font-size: 110%;
   display: block;
   margin-block-start: 1em;
   margin-block-end: 1em;
@@ -45,7 +45,7 @@ p {
   margin-bottom: 2rem;
   text-align: center;
   font-family: 'Raleway', cursive;
-  height: 5%;
+  padding: 1vh;
 }
 
 #yourVideo {
@@ -59,7 +59,7 @@ p {
 .top {
   background-color: black;
   color: white;
-  padding: 10px;
+  padding: 1%;
   padding-bottom: 5px;
   text-align: center;
 }
